--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ main {
 }
 
 .cardholder-field {
-  font-size: .65rem;
+  font-size: .85rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -75,7 +75,7 @@ main {
 .card-front-bottom {
   grid-row: 12 / 12;
   grid-column: 1 / 11;
-  font-size: .65rem;
+  font-size: .85rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -176,7 +176,7 @@ main {
 }
 
 .exp-date {
-  width: 30%;
+  width: 35%;
   text-align: center;
 }
 
@@ -321,6 +321,14 @@ main {
     z-index: 2;
   }
 
+  .cardholder-field {
+    font-size: .55rem;
+  }
+
+  .card-front-bottom {
+    font-size: .55rem;
+  }
+
   .card-back {
     position: relative;
     bottom: 3.5rem;
@@ -365,5 +373,15 @@ main {
     height: 45%;
     background-image: none;
     background-color: hsl(278, 68%, 11%);
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .card-div {
+    justify-content: flex-end;
+    gap: 0;
+    width: 100%;
+    height: 45%;
+    background-image: url('./images/bg-main-mobile.png');
   }
 }
