--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
   font-family: 'Space Grotesk', sans-serif;
 }
 
+body {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
 button {
   font-size: .85rem;
 }
@@ -307,10 +313,6 @@ main {
 /* Mobile */
 
 @media screen and (max-width: 768px) {
-  
-}
-
-@media screen and (max-width: 768px) {
   main {
     flex-direction: column;
   }
@@ -331,7 +333,7 @@ main {
 
   .card-back {
     position: relative;
-    bottom: 3.5rem;
+    bottom: 25%;
     left: 0%;
     z-index: 1;
   }
@@ -383,5 +385,26 @@ main {
     width: 100%;
     height: 45%;
     background-image: url('./images/bg-main-mobile.png');
+  }
+}
+
+@media screen and (min-height: 700px) and (max-width: 768px) {
+  .card-div {
+    justify-content: flex-end;
+    gap: 0;
+    width: 100%;
+    height: 45%;
+    background-image: none;
+    background-color: hsl(278, 68%, 11%);
+  }
+
+  .card-back {
+    bottom: 15%;
+  }
+}
+
+@media screen and (min-height: 800px) and (max-width: 768px) {
+  .card-back {
+    bottom: 7.5%;
   }
 }
