--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ main {
 
   .card-back {
     position: relative;
-    bottom: 25%;
+    bottom: 35%;
     left: 0%;
     z-index: 1;
   }
@@ -388,12 +388,8 @@ main {
   }
 }
 
-@media screen and (min-height: 700px) and (max-width: 768px) {
+@media screen and (min-height: 700px) and (max-width: 525px) {
   .card-div {
-    justify-content: flex-end;
-    gap: 0;
-    width: 100%;
-    height: 45%;
     background-image: none;
     background-color: hsl(278, 68%, 11%);
   }
@@ -403,7 +399,7 @@ main {
   }
 }
 
-@media screen and (min-height: 800px) and (max-width: 768px) {
+@media screen and (min-height: 800px) {
   .card-back {
     bottom: 7.5%;
   }
